[fix] overflow-x

--- a/css/base.css
+++ b/css/base.css
@@ -44,6 +44,7 @@ html, body {
 	font-weight: 300 !important;
     color: #000;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
 
 
