--- a/css/layout.css
+++ b/css/layout.css
@@ -63,6 +63,10 @@ article {
     max-width: 64rem;
 }
 
+.content-container .column-right {
+    max-width: 64rem;
+}
+
 .content-container,
 .footer-container {
     margin-bottom: 6rem;
